@@ -73,7 +73,11 @@ begin
     exit(FT_NOMOREFIELDS);
 
   StrPLCopy(FieldName, TFieldNames[TFieldIndex(FieldIndex)], MaxLen);
-  result := FT_STRING;
+
+  if TFieldIndex(FieldIndex) = IDX_NUM_FONTS then
+    result := FT_NUMERIC_32
+  else
+    result := FT_STRING;
 end;
 
 
@@ -147,16 +151,26 @@ begin
   if info_cache[TFieldIndex(FieldIndex)] = '' then
     exit(FT_FIELDEMPTY);
 
-  {$IFDEF WINDOWS}
-  StrPLCopy(
-    PWideChar(FieldValue),
-    UTF8Decode(info_cache[TFieldIndex(FieldIndex)]),
-    MaxLen div SizeOf(WideChar));
-  result := FT_STRINGW;
-  {$ELSE}
-  StrPLCopy(PAnsiChar(FieldValue), info_cache[TFieldIndex(FieldIndex)], MaxLen);
-  result := FT_STRING;
-  {$ENDIF}
+  if TFieldIndex(FieldIndex) = IDX_NUM_FONTS then
+    begin
+      PLongint(FieldValue)^ := StrToIntDef(
+        info_cache[TFieldIndex(FieldIndex)], 1);
+      result := FT_NUMERIC_32;
+    end
+  else
+    begin
+      {$IFDEF WINDOWS}
+      StrPLCopy(
+        PWideChar(FieldValue),
+        UTF8Decode(info_cache[TFieldIndex(FieldIndex)]),
+        MaxLen div SizeOf(WideChar));
+      result := FT_STRINGW;
+      {$ELSE}
+      StrPLCopy(
+        PAnsiChar(FieldValue), info_cache[TFieldIndex(FieldIndex)], MaxLen);
+      result := FT_STRING;
+      {$ENDIF}
+    end;
 end;
 
 
